--- a/Movie DB/index.html
+++ b/Movie DB/index.html
@@ -36,11 +36,7 @@
           />
         </div>
 
-        <input
-          type="submit"
-          class="btn btn-primary mt-2"
-          value="Obtener Pelicula"
-        />
+        <button id="boton" class="btn btn-primary">Search</button>
       </form>
     </div>
     <h2>Popular movies on TMDB</h2>
