--- a/Movie DB/index.html
+++ b/Movie DB/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Peliculas app</title>
   </head>
@@ -25,20 +26,20 @@
 
     <div class="container mt-5">
       <h1 class="text-center">Buscador de peliculas</h1>
-      <form id="formulario" class="mt-10">
+      <form id="formulario" class="mt-10 text-center">
         <div class="mt-5">
           <input
             type="text"
             name="pelicula"
             id="pelicula"
             placeholder="Escribe tu pelicula"
-            class="form-control"
+            class="form-control w-50"
           />
         </div>
       </form>
       <button id="boton" class="btn btn-primary">Search</button>
     </div>
-    <h2>Popular movies on TMDB</h2>
+    <h2 class="text-center">Popular movies on TMDB</h2>
     <div class="container2"></div>
 
     <script src="app.js"></script>
