--- a/Movie DB/index.html
+++ b/Movie DB/index.html
@@ -41,6 +41,7 @@
     </div>
     <h2 class="text-center">Popular movies on TMDB</h2>
     <div class="container2"></div>
+    <div class="container3"></div>
 
     <script src="app.js"></script>
   </body>
